added hover effect & changed resume

--- a/index.html
+++ b/index.html
@@ -98,10 +98,10 @@
                         <br>
                         <li>During my second year, I taught students at the 12th grade level and gained experience in
                             the field of <b class="colorlinks">teaching</b>.</li><br>
-                        <li>As an accomplished tutor, I endeavor to address any queries related to my area of expertise,
+                        <!-- <li>As an accomplished tutor, I endeavor to address any queries related to my area of expertise,
                             including Mathematics, Computer Science, and Physics,<b class="colorlinks"> at Filo
                                 Tutor</b>
-                            <b>(Current Rating:4+)</b>
+                            <b>(Current Rating:4+)</b> -->
                         </li>
                     </ol>
                     <br>
@@ -116,7 +116,7 @@
                     <div class="about">
                         <h1>TOP EXPERTISE</h1>
                         <p class="resume"><b>Full Stack developer with primary focus on React Js and MySql: </b><a
-                                target="_blank" href="images/Priyanka_Sharma_Resume.pdf.pdf" class="colorlinks">Download
+                                target="_blank" href="images/Priyanka_Sharma_Resume.pdf" class="colorlinks">Download
                                 Resume</a></p>
                     </div>
                     <div id="skillsContainer">
